updates. remixer with salt

--- a/.config
+++ b/.config
@@ -1,8 +1,9 @@
 {	
-	"folders": ["/media/evgenii/TOSHIBA EXT/zhenya/живём с Женей (видео блог)", "/home/evgenii/2025", "/home/evgenii/2024"],	
-	"mfolders": ["/home/evgenii/Desktop/music folder"],	
+	"folders": ["/media/evgenii/TOSHIBA EXT/zhenya/media/dvds/", "/home/evgenii/2025", "/home/evgenii/2024", "/home/evgenii/2023", "/media/evgenii/TOSHIBA EXT/zhenya/zhszh"],	
+	"mfolders": ["/home/evgenii/Desktop/all/before work/music folder/"],	
 	"countv": 25,	
 	"seconds": [0.2,0.5,0.7,1,1.5,1.7,2,3],	
-	"flags": ["horizontal", "all"],	
-	"exts": [".mp4", ".avi", ".VOB"]
+	"flags": ["horizontal"],	
+	"exts": [".mp4", ".avi", ".VOB"],
+	"x": ["/home/evgenii/2025", "/home/evgenii/2024", "/home/evgenii/2023", "/media/evgenii/TOSHIBA EXT/zhenya/zhszh"]
 }
